Chapter 1: core server (no I/O) (#1)
* adapters now called infra
plus set up codegen

* change the version

* create ports

* improve tests a bit, make them readable

* make idgen and clock overridable

* create dev.sh

* add a server and fakes

* test with inmem worker using fakes

* add ci

* add error handling

* fix test

* polish tests and fakes
